<?xml version="1.0"?>
<package format="2">
  <name>interbotix_common_modules</name>
  <version>0.0.0</version>
  <description>The interbotix_common_modules package</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>
  <author email="solomon@trossenrobotics.com">Solomon Wiznitzer</author>
  <depend>geometry_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>python3-numpy</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
