<?xml version="1.0"?>
<package format="2">
  <name>interbotix_common_sim</name>
  <version>0.0.0</version>
  <description>The interbotix_common_sim package</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>

  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
    <gazebo_ros gazebo_media_path="${prefix}/media"/>
  </export>
</package>
