<?xml version="1.0"?>
<package format="2">
  <name>interbotix_common_toolbox</name>
  <version>0.0.0</version>
  <description>The interbotix_common_toolbox metapackage</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>

  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>interbotix_common_modules</exec_depend>
  <exec_depend>interbotix_landmark_modules</exec_depend>
  <exec_depend>interbotix_moveit_interface</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
