<?xml version="1.0"?>
<package format="2">
  <name>interbotix_common_toolbox</name>
  <version>0.0.0</version>
  <description>The interbotix_common_toolbox metapackage</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>

  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>interbotix_common_modules</depend>
  <!-- <depend>interbotix_landmark_modules</depend> -->
  <!-- <depend>interbotix_moveit_interface</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
