<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interbotix_common_toolbox</name>
  <version>0.0.0</version>
  <description>The interbotix_common_toolbox metapackage</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD-3-Clause</license>
  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>interbotix_common_modules</exec_depend>
  <!-- <exec_depend>interbotix_landmark_modules</exec_depend> -->
  <exec_depend>interbotix_common_sim</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
