<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interbotix_landmark_modules</name>
  <version>0.0.0</version>
  <description>The interbotix_landmark_modules package</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>
  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>interbotix_common_modules</depend>
  <depend>interbotix_perception_modules</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>tf_transformations</depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <test_depend>interbotix_tf_tools</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
