<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interbotix_io_modules</name>
  <version>0.0.0</version>
  <description>The interbotix_io_modules package</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD-3-Clause</license>
  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <exec_depend>interbotix_common_modules</exec_depend>
  <exec_depend>interbotix_footswitch_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
