<?xml version="1.0"?>
<package format="2">
  <name>interbotix_perception_modules</name>
  <version>0.0.0</version>
  <description>The interbotix_perception_modules package</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/interbotix_perception_modules</url> -->
  <author email="trsupport@trossenrobotics.com">Solomon Wiznitzer</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>apriltag_ros</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
