<?xml version="1.0"?>
<package format="2">
  <name>interbotix_rpi_modules</name>
  <version>0.0.0</version>
  <description>The interbotix_rpi_modules package</description>
  <maintainer email="trsupport@trossenrobotics.com">Solomon Wiznitzer</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/interbotix_rpi_modules</url> -->
  <author email="solomon@trossenrobotics.com">Solomon Wiznitzer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
